--- a/vs code/flyer,.html
+++ b/vs code/flyer,.html
@@ -13,7 +13,7 @@
 <h2>converse chuck taylor all star low top</h2>
     </header>
  <div>
-<img src="C:\Users\ADMIN\Documents\GitHub\developers-hangout\challenges.jpg" >
+<img src="https://i.ibb.co/Jr7Wh1d/challenges.jpg" >
  </div>
  <div>
     <div class="price">
